tests/expectations/compiler/function/variable_shadow_function_fail.out
Error [EAST0372006]: function `f1` shadowed by
    --> compiler-test:8:13
     |
   8 |         let f1: u8 = 1u8;
     |             ^^
Error [ETYC0372005]: Unknown variable `f1`
    --> compiler-test:9:16
     |
   9 |         return f1;
     |                ^^
